# smcc

./: .gitignore  CMakeLists.txt  README.md  smcc.cc
core/: CMakeLists.txt  IR.h  api.h  ast.cc  ast.h  ast_v2.cc  codegen.cc  codegen.h  driver.cc  driver.h  lexer.cc  lexer.h  logging.h  node.cc  node.h  parser.cc  parser.h  token.cc  token.h
test/: add.sm
